fix(ajax): track set, photo commenting, reposts
fixes #1170

--- a/Web/static/css/audios.css
+++ b/Web/static/css/audios.css
@@ -300,7 +300,8 @@
     border-radius: inherit !important;
 }
 
-.audioEntry.nowPlaying .performer a {
+.audioEntry.nowPlaying .performer a,
+.audioEntry.nowPlaying .performer {
     color: #f4f4f4 !important;
 }
 
