--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -628,3 +628,8 @@ ul {
 #backdropFilePicker {
     margin: 15px !important;
 }
+
+#upload_container .upload_container_element {
+    border: 1px solid #383052;
+    background: #1e1b2a;
+}
