--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -404,6 +404,11 @@
             {script "js/al_feed.js"}
         {/ifset}
 
+        {script "js/node_modules/leaflet/dist/leaflet.js"}
+        {script "js/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.js"}
+        {css "js/node_modules/leaflet/dist/leaflet.css"}
+        {css "js/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css"}
+        
         <script>bsdnHydrate();</script>
 
         <script n:if="OPENVK_ROOT_CONF['openvk']['telemetry']['plausible']['enable']" async defer data-domain="{php echo OPENVK_ROOT_CONF['openvk']['telemetry']['plausible']['domain']}" src="{php echo OPENVK_ROOT_CONF['openvk']['telemetry']['plausible']['server']}js/plausible.js"></script>
