--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -239,6 +239,14 @@
                                     </object>
                                 </a>
                             </div>
+
+                            <div id="news" n:if="OPENVK_ROOT_CONF['openvk']['preferences']['news']['enable']">
+                                <b>{_news} </b>
+                                    <hr size="1">
+                                    <text>{php echo OPENVK_ROOT_CONF['openvk']['preferences']['news']['title'];}</text>
+                                    <br><br>
+                                    <a href="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['news']['link'];}">Подробнее »</a>
+                            </div>
                             
                             <div n:if="OPENVK_ROOT_CONF['openvk']['preferences']['commerce'] && $thisUser->getCoins() != 0" id="votesBalance">
                                 {tr("you_still_have_x_points", $thisUser->getCoins())|noescape}
