feat(wall): ability to add geopoint to post (#945)
* Гео-метки

* Update Post.xml

* Wall: geotag translation

* Wall: design + sql fix

* Карта ближайших постов

* Update al_wall.js

* VKAPI: Geo support (not tested idk)

* Update WallPresenter.php

* Better geo points

* Редактирование названия геоточки через интерфейс при создании

* SQL and geopoint name fixes

* fix js

* rewrite a lot

---------

Co-authored-by: veselcraft <veselcraft@icloud.com>
Co-authored-by: mrilyew <99399973+mrilyew@users.noreply.github.com>

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -851,6 +851,11 @@ h4 {
     margin-bottom: 2px;
 }
 
+.post-geo {
+    margin: 1px 0px;
+    padding: 0 4px;
+}
+
 .post-signature span {
     color: grey;
 }
@@ -3924,4 +3929,10 @@ hr {
     left: 9px;
     top: 3px;
     font-size: 15px;
+}
+
+.map_svg_icon {
+    display: inline-block;
+    margin-bottom: -2px;
+    fill: #7d7d7d;
 }
