--- a/Email/password-reset.eml.latte
+++ b/Email/password-reset.eml.latte
@@ -46,14 +46,17 @@
                                             </th>
                                         </tr>
                                     </table>
-
+                                    
                                     <table class="row">
                                         <tr>
                                             <th class="small-12 large-12 columns first last">
                                                 <table class="row">
                                                     <tr>
                                                         <td>
-
+                                                            <center>
+                                                                <img src="pictures/lock.jpeg" align="center" class="float-center" width=128 height=128 />
+                                                            </center>
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -61,9 +64,9 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <hr/>
-
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -71,11 +74,11 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <p class="text-left">
                                                                 Здравствуйте, {$name}! Вы вероятно забыли пароль от аккаунта OpenVK? Мы идём к Вам на помощь!
                                                             </p>
-
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -83,7 +86,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <table class="button large expand success">
                                                                 <tr>
                                                                     <td>
@@ -91,7 +94,7 @@
                                                                             <tr>
                                                                                 <td>
                                                                                     <center>
-                                                                                        <a href="https://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={rawurlencode($key)}" align="center" class="float-center">Сбросить пароль!</a>
+                                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={rawurlencode($key)}" align="center" class="float-center">Сбросить пароль!</a>
                                                                                     </center>
                                                                                 </td>
                                                                             </tr>
@@ -99,7 +102,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -107,30 +110,30 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <p class="text-left">
                                                                 Если кнопка не работает, вы можете попробовать скопировать и вставить эту ссылку в адресную строку вашего веб-обозревателя:
                                                             </p>
-
+                                                            
                                                             <table class="callout">
                                                                 <tr>
                                                                     <th class="callout-inner primary">
-                                                                        <a href="https://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={$key}" style="color: #000; text-decoration: none;">
-                                                                            https://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={$key}
+                                                                        <a href="http://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={$key}" style="color: #000; text-decoration: none;">
+                                                                            http://{$_SERVER['HTTP_HOST']}/restore?act=finish&key={$key}
                                                                         </a>
                                                                     </th>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <p class="text-left">
                                                                 Обратите внимание на то, что эту ссылку нельзя:
                                                             </p>
-
+                                                            
                                                             <ul>
-                                                                <li>Передавать другим людям (даже друзьям, питомцам, соседям, любимым девушкам)</li>
+                                                                <li>Передавать другим людям (даже друзьям, питомцам, соседам, любимым девушкам)</li>
                                                                 <li>Использовать, если прошло более двух дней с её генерации</li>
                                                             </ul>
-
+                                                            
                                                             <table class="callout">
                                                                 <tr>
                                                                     <th class="callout-inner alert">
@@ -141,7 +144,7 @@
                                                                     </th>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -149,11 +152,11 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <p class="text-right">
                                                                 С уважением, овк-тян.
                                                             </p>
-
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -161,9 +164,9 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <hr/>
-
+                                                            
                                                             <table class="spacer">
                                                                 <tr>
                                                                     <td>
@@ -171,7 +174,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </table>
-
+                                                            
                                                             <p class="text-left">
                                                                 <small>
                                                                     Вы получили это письмо так как кто-то или вы отправили запрос на восстановлние пароля. Это не рассылка и от неё нельзя отписаться. Если вы всё равно хотите перестать получать подобные письма, деактивируйте ваш аккаунт.
