feat(profile): fav games & custom fields (#1193)
* add fav games

* add additional fields

* add gui 4 dis

* add maxlength

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -460,6 +460,7 @@
                 "max_filesize_mb": 5,
                 "current_id": {$thisUser ? $thisUser->getId() : 0},
                 "disable_ajax": {$disable_ajax ? $disable_ajax : 0},
+                "max_add_fields": {ovkGetQuirk("users.max-fields")},
             }
         </script>
 
