--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -240,12 +240,12 @@
                                 </a>
                             </div>
 
-                            <div id="news" n:if="OPENVK_ROOT_CONF['openvk']['preferences']['news']['enable']">
+                            <div id="news" n:if="OPENVK_ROOT_CONF['openvk']['preferences']['news']['show']">
                                 <b>{_news} </b>
-                                    <hr size="1">
-                                    <text>{php echo OPENVK_ROOT_CONF['openvk']['preferences']['news']['title'];}</text>
-                                    <br><br>
-                                    <a href="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['news']['link'];}">{_news_more} »</a>
+                                <hr size="1">
+                                <text>{$newsText}...</text>
+                                <br><br>
+                                <a href="{$newsLink}">{_news_more}</a>
                             </div>
                             
                             <div n:if="OPENVK_ROOT_CONF['openvk']['preferences']['commerce'] && $thisUser->getCoins() != 0" id="votesBalance">
