--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -2826,7 +2826,7 @@ a.poll-retract-vote {
     height: 20px;
     background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; 
     background-color: #fff; 
-    padding-left: 18px;
+    padding-left: 18px !important;
     width: 120px;
 }
 
@@ -3966,4 +3966,119 @@ hr {
     display: inline-block;
     margin-bottom: -2px;
     fill: #7d7d7d;
+}
+
+/* Documents */
+
+#docs_page_wrapper {
+    margin-left: -10px;
+    margin-top: -10px;
+    margin-bottom: -10px;
+    display: block;
+    width: 102.8%;
+}
+
+#docs_page_wrapper .docs_page_search {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 10px;
+    border-bottom: 1px solid #CCCCCC;
+    background: #F0F0F0;
+}
+
+#docs_page_wrapper .docs_page_search input[type="search"] {
+    height: 23px;
+    background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 5px; 
+    background-color: #fff; 
+    padding-left: 18px !important;
+}
+
+#docs_page_wrapper .docs_page_search input[type="search"], #docs_page_wrapper .docs_page_search form {
+    width: 100%;
+}
+
+#docs_page_wrapper .container_white {
+    display: flex;
+    flex-direction: column;
+    padding: 5px 10px;
+}
+
+.docListViewItem {
+    max-height: 52px;
+    height: 38px;
+    display: grid;
+    grid-template-columns: 0fr 1fr 0fr;
+    gap: 10px;
+    padding: 7px 7px;
+    border-bottom: 1px solid #EDEDED;
+}
+
+.docListViewItem:last-of-type {
+    border-bottom: unset !important;
+}
+
+.docListViewItem:hover {
+    background: #f7f7f7;
+}
+
+.docListViewItem .doc_icon {
+    width: 50px;
+    height: 38px;
+    background: #E6E6E6;
+    user-select: none;
+    object-fit: cover;
+    border-radius: 2px;
+}
+
+.docListViewItem .doc_content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1px;
+    /*gap: 5px;*/
+}
+
+.docListViewItem .doc_content b {
+    color: black;
+}
+
+.docListViewItem .doc_content .doc_content_info, .docListViewItem .doc_content span {
+    color: #6d6d6d;
+}
+
+.docListViewItem .doc_icon.no_image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    height: 17px;
+    padding: 2px 0px;
+}
+
+.docListViewItem .doc_icon.no_image span {
+    color: #6b6b6b;
+}
+
+.docListViewItem .doc_icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.docListViewItem .doc_volume {
+    display: none;
+    align-items: center;
+    gap: 5px;
+}
+
+.docListViewItem .doc_volume > div {
+    width: 20px;
+    height: 20px;
+    background-color: gray;
+}
+
+.docListViewItem:hover .doc_volume {
+    display: flex;
 }
