better ui, search, uploading (icons by myslivets)
Co-Authored-By: Daniel <60743585+myslivets@users.noreply.github.com>

--- a/Web/Presenters/templates/Report/Tabs.xml
+++ b/Web/Presenters/templates/Report/Tabs.xml
@@ -49,6 +49,9 @@
     <div n:attr="id => ($mode === 'audio' ? 'activetabs' : 'ki')" class="tab" mode="audio">
         <a n:attr="id => ($mode === 'audio' ? 'act_tab_a' : 'ki')">{_audios}</a>
     </div>
+    <div n:attr="id => ($mode === 'docs' ? 'activetabs' : 'ki')" class="tab" mode="doc">
+        <a n:attr="id => ($mode === 'docs' ? 'act_tab_a' : 'ki')">{_documents}</a>
+    </div>
 </center>
 
 <script>
