--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -4010,6 +4010,73 @@ hr {
     padding: 5px 10px;
 }
 
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+    padding: 10px 10px;
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container .docGalleryItem {
+    height: 200px;
+    cursor: pointer;
+    position: relative;
+    /*width: 200px;*/
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container .docGalleryItem img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container .docGalleryItem .doc_bottom_panel {
+    position: absolute;
+    bottom: 0px;
+    background: rgba(1, 1, 1, 0.7);
+    padding: 6px 6px;
+    width: calc(100% - 12px);
+
+    display: grid;
+    grid-template-columns: 1fr 0fr;
+}
+
+.docGalleryItem .doc_shown_by_hover {
+    transition: all 100ms ease-in;
+    opacity: 0;
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container .docGalleryItem:hover .doc_shown_by_hover {
+    opacity: 1;
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container .docGalleryItem .doc_bottom_panel span {
+    color: white;
+}
+
+#docs_page_wrapper .docs_page_content.docs_page_gallery .scroll_container .docGalleryItem .doc_bottom_panel .doc_bottom_panel_size {
+    max-width: 49px;
+    width: max-content;
+}
+
+.docGalleryItem .doc_top_panel {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: rgba(1, 1, 1, 0.7);
+    padding: 6px 6px;
+
+    display: flex;
+    gap: 5px;
+}
+
+.docGalleryItem .doc_top_panel > div {
+    width: 10px;
+    height: 10px;
+    background-color: white;
+}
+
 #docs_page_wrapper select {
     width: 150px;
 }
@@ -4023,7 +4090,7 @@ hr {
     border-bottom: 1px solid #EDEDED;
 }
 
-.scroll_node:last-of-type .docListViewItem {
+.docs_page_content .docListViewItem:last-of-type {
     border-bottom: unset !important;
 }
 
@@ -4110,4 +4177,8 @@ hr {
 
 .docListViewItem .doc_volume #mark_icon {
     background-position-x: -80px;
+}
+
+.doc_viewer_wrapper {
+    overflow: hidden;
 }
